--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
+
+<style type="text/css">
+	
+/* body {
+	background-image: url("sayagata.png");
+} */
+
+body {background-color: lightgray;}
+
+img.displayed {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
+	-webkit-box-shadow: 10px 10px 13px -2px rgba(145,145,145,1);
+	-moz-box-shadow: 10px 10px 13px -2px rgba(145,145,145,1);
+	box-shadow: 10px 10px 13px -2px rgba(145,145,145,1);
+}
+	
+H2 { text-align: center } 
+
+</style>
+
+<img src="images/430white.png" class="displayed"  width="800px"/>
